--- a/package.json
+++ b/package.json
@@ -15,8 +15,12 @@
     "bootstrap-vue-next": "^0.25.8",
     "font-awesome": "^4.7.0",
     "frontend": "file:",
+    "jwt-decode": "^4.0.0",
+    "sweetalert2": "^11.14.5",
+    "vee-validate": "^4.14.6",
     "vue": "^3.5.12",
-    "vue-router": "^4.4.5"
+    "vue-router": "^4.4.5",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
